--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.12.2",
     "cors": "^2.8.5",
     "express": "^5.1.0",
+    "firebase": "^12.5.0",
     "jotai": "^2.12.5",
     "react": "^19.1.0",
     "react-cookie": "^8.0.1",
