--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^1.12.2",
+    "classnames": "^2.5.1",
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "firebase": "^12.5.0",
