api 재호출 안해도 되는거 저장!

--- a/src/vercel.json
+++ b/src/vercel.json
@@ -4,5 +4,9 @@
       "source": "/api/:path*",
       "destination": "https://gnews.io/api/v4/:path*"
     }
+  ],
+  "routes": [
+    { "handle": "filesystem" },
+    { "src": "/.*", "dest": "/index.html" }
   ]
 }
