--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@use-gesture/react": "^10.3.1",
     "@xstate/react": "^6.0.0",
     "axios": "^1.12.2",
     "classnames": "^2.5.1",
