--- a/src/vercel.json
+++ b/src/vercel.json
@@ -6,7 +6,11 @@
     }
   ],
   "routes": [
-    { "handle": "filesystem" },
-    { "src": "/.*", "dest": "/index.html" }
+    { 
+      "handle": "filesystem"
+    },
+    { 
+      "src": "/.*", "dest": "/index.html"
+     }
   ]
 }
